--- a/src/Compilers/VisualBasic/Portable/VBResources.resx
+++ b/src/Compilers/VisualBasic/Portable/VBResources.resx
@@ -5062,6 +5062,7 @@
 /reportanalyzer                   Report additional analyzer information, such as
                                   execution time.
                                   - LANGUAGE -
+
 /define:&lt;symbol_list&gt;             Declare global conditional compilation 
                                   symbol(s). symbol_list:name=value,... 
                                   (Short form: /d)
@@ -5119,6 +5120,9 @@
 /netcf                            Target the .NET Compact Framework.
 /nostdlib                         Do not reference standard libraries 
                                   (system.dll and VBC.RSP file).
+/pathmap:&lt;K1&gt;=&lt;V1&gt;,&lt;K2&gt;=&lt;V2&gt;,...
+                                  Specify a mapping for source path names output by
+                                  the compiler.
 /platform:&lt;string&gt;                Limit which platforms this code can run on; 
                                   must be x86, x64, Itanium, arm,
                                   AnyCPU32BitPreferred or anycpu (default).
