Handle CodeFix with bad ImmutableArray Check IsDefault of any ImmutableArray given for FixableDiagnosticIds, to ensure that it has been properly initialized. Throw and InvalidOperationException to let the user know to fix their CodeFixer.

--- a/src/Workspaces/Core/Portable/WorkspacesResources.resx
+++ b/src/Workspaces/Core/Portable/WorkspacesResources.resx
@@ -456,4 +456,7 @@
   <data name="Exceptions" xml:space="preserve">
     <value>Exceptions:</value>
   </data>
+  <data name="FixableDiagnosticIdsIncorrectlyInitialized" xml:space="preserve">
+    <value>'{0}' returned an uninitialized ImmutableArray</value>
+  </data>
 </root>
