Add C# language version check for read-only auto-properties.
Fixes #4696.

--- a/src/Compilers/CSharp/Portable/CSharpResources.resx
+++ b/src/Compilers/CSharp/Portable/CSharpResources.resx
@@ -219,6 +219,9 @@
   <data name="IDS_FeatureAutoImplementedProperties" xml:space="preserve">
     <value>automatically implemented properties</value>
   </data>
+  <data name="IDS_FeatureReadonlyAutoImplementedProperties" xml:space="preserve">
+    <value>readonly automatically implemented properties</value>
+  </data>
   <data name="IDS_FeatureObjectInitializer" xml:space="preserve">
     <value>object initializer</value>
   </data>
