Inline Rename usability improvements
Fixes #5076

- Introduce instructional text when the dashboard is first shown (or when newName = originalName). This should help users who are used to the pre-VS2015 modal dialog learn to edit the identifier inline in the editor. If we at some point add a way to launch Inline Rename with a new name already specified, we'll need to be a bit more careful about how to both show that new name *and* the instructional text.

- Show the newName as the user types it

- Rearranging the info in the window to flow a bit better:
    - Heading (rename from x to y, or show getting started instructions)
    - Settings
    - Summary (# locations to be updated and any conflict info).

- Slightly changed the reference count text from "found 1 reference in 1 file" (which made sense in large solutions where you saw "Searching..." for a while, which then got replaced with this text) to a more standalone version of "Rename will update 1 reference in 1 file."

--- a/src/EditorFeatures/Core/EditorFeaturesResources.resx
+++ b/src/EditorFeatures/Core/EditorFeaturesResources.resx
@@ -207,14 +207,14 @@
   <data name="RudeEdit" xml:space="preserve">
     <value>Rude Edit</value>
   </data>
-  <data name="FoundReferenceInFile" xml:space="preserve">
-    <value>found 1 reference in 1 file</value>
+  <data name="RenameWillUpdateReferenceInFile" xml:space="preserve">
+    <value>Rename will update 1 reference in 1 file.</value>
   </data>
-  <data name="FoundReferencesInFile" xml:space="preserve">
-    <value>found {0} references in 1 file</value>
+  <data name="RenameWillUpdateReferencesInFile" xml:space="preserve">
+    <value>Rename will update {0} references in 1 file.</value>
   </data>
-  <data name="FoundReferencesInMultipleFiles" xml:space="preserve">
-    <value>found {0} references in {1} files</value>
+  <data name="RenameWillUpdateReferencesInMultipleFiles" xml:space="preserve">
+    <value>Rename will update {0} references in {1} files.</value>
   </data>
   <data name="ConflictsWillBeResolved" xml:space="preserve">
     <value>{0} conflict(s) will be resolved</value>
@@ -538,7 +538,7 @@
     <value>Variadic SignatureHelpItem must have at least one parameter.</value>
   </data>
   <data name="Rename1" xml:space="preserve">
-    <value>Rename '{0}'</value>
+    <value>Rename: '{0}'</value>
   </data>
   <data name="LightBulbSessionIsAlreadyDismissed" xml:space="preserve">
     <value>Light bulb session is already dismissed.</value>
@@ -738,5 +738,11 @@ Do you want to proceed?</value>
   </data>
   <data name="SymbolHasNoImplementations" xml:space="preserve">
     <value>The symbol has no implementations.</value>
+  </data>
+  <data name="NewName1" xml:space="preserve">
+    <value>New name: {0}</value>
+  </data>
+  <data name="InlineRenameInstructions" xml:space="preserve">
+    <value>Modify any highlighted location to begin renaming.</value>
   </data>
 </root>
