--- a/src/Scripting/Core/ScriptingResources.resx
+++ b/src/Scripting/Core/ScriptingResources.resx
@@ -146,4 +146,16 @@
   <data name="CannotSetConstantVariable" xml:space="preserve">
     <value>Cannot set a constant variable</value>
   </data>
+  <data name="HelpPrompt" xml:space="preserve">
+    <value>Type "#help" for more information.</value>
+  </data>
+  <data name="HelpText" xml:space="preserve">
+    <value>Keyboard shortcuts:
+  Enter         If the current submission appears to be complete, evaluate it.  Otherwise, insert a new line.
+  Escape        Clear the current submission.
+  UpArrow       Replace the current submission with a previous submission.
+  DownArrow     Replace the current submission with a subsequent submission (after having previously navigated backwards).
+REPL commands:
+  #help         Display help on available commands and key bindings.</value>
+  </data>
 </root>
