--- a/src/Scripting/CSharp/CSharpScriptingResources.resx
+++ b/src/Scripting/CSharp/CSharpScriptingResources.resx
@@ -124,12 +124,13 @@
     <value>Copyright (C) Microsoft Corporation. All rights reserved.</value>
   </data>
   <data name="InteractiveHelp" xml:space="preserve">
-    <value><![CDATA[Usage: csi [options] [script-file.csx | -] [script-arguments]
+    <value><![CDATA[Usage: csi [option] ... [script-file.csx] [script-argument] ...
 
-If script-file.csx is specified executes the script, otherwise launches an interactive REPL (Read Eval Print Loop).
+Executes script-file.csx if specified, otherwise launches an interactive REPL (Read Eval Print Loop).
 
 Options:
   /help                          Display this usage message (alternative form: /?)
+  /i                             Drop to REPL after executing the specified script.
   /r:<file>                      Reference metadata from the specified assembly file (alternative form: /reference)
   /r:<file list>                 Reference metadata from the specified assembly files (alternative form: /reference)
   /lib:<path list>               List of directories where to look for libraries specified by #r directive. 
