--- a/src/InteractiveWindow/Editor/InteractiveWindowResources.resx
+++ b/src/InteractiveWindow/Editor/InteractiveWindowResources.resx
@@ -219,4 +219,10 @@
   <data name="Usage" xml:space="preserve">
     <value>Usage:</value>
   </data>
+  <data name="WaitTitle" xml:space="preserve">
+    <value>Copy</value>
+  </data>
+  <data name="WaitMessage" xml:space="preserve">
+    <value>Formatting selection</value>
+  </data>
 </root>
