--- a/src/EditorFeatures/Core/EditorFeaturesResources.resx
+++ b/src/EditorFeatures/Core/EditorFeaturesResources.resx
@@ -745,4 +745,7 @@ Do you want to proceed?</value>
   <data name="InlineRenameInstructions" xml:space="preserve">
     <value>Modify any highlighted location to begin renaming.</value>
   </data>
+  <data name="InteractivePaste" xml:space="preserve">
+    <value>Paste From Interactive Window</value>
+  </data>
 </root>
