Changes to solution level bulk suppression command for baselining
1. Don't suppress compiler diagnostics when bulk suppressing all active issues in the solution - only suppress analyzer diagnostics in the global suppressions side-car file.
2. Use live diagnostics instead of build diagnostics for computing bulk suppression fix.
3. Show a preview changes dialog for the changes.

Fixes VSO 159792: Don't suppress FxCop and compiler diagnostics when executing "Suppress active issues" command from solution explorer

--- a/src/VisualStudio/Core/Def/ServicesVSResources.resx
+++ b/src/VisualStudio/Core/Def/ServicesVSResources.resx
@@ -489,20 +489,17 @@ Use the dropdown to view and switch to other projects this file may belong to.</
   <data name="SuppressMultipleOccurrences" xml:space="preserve">
     <value>Suppress diagnostics</value>
   </data>
-  <data name="ComputingSuppressionFix" xml:space="preserve">
-    <value>Computing suppressions fix...</value>
+  <data name="ComputingDiagnostics" xml:space="preserve">
+    <value>Computing diagnostics...</value>
   </data>
-  <data name="ApplyingSuppressionFix" xml:space="preserve">
-    <value>Applying suppressions fix...</value>
+  <data name="ComputingFix" xml:space="preserve">
+    <value>Computing fix...</value>
+  </data>
+  <data name="ApplyingFix" xml:space="preserve">
+    <value>Applying fix...</value>
   </data>
   <data name="RemoveSuppressMultipleOccurrences" xml:space="preserve">
     <value>Remove suppressions</value>
-  </data>
-  <data name="ComputingRemoveSuppressionFix" xml:space="preserve">
-    <value>Computing remove suppressions fix...</value>
-  </data>
-  <data name="ApplyingRemoveSuppressionFix" xml:space="preserve">
-    <value>Applying remove suppressions fix...</value>
   </data>
   <data name="ThisWorkspaceOnlySupportsOpeningDocumentsOnTheUIThread" xml:space="preserve">
     <value>This workspace only supports opening documents on the UI thread.</value>
