Add period as requested.

--- a/src/Compilers/CSharp/Portable/CSharpResources.resx
+++ b/src/Compilers/CSharp/Portable/CSharpResources.resx
@@ -4667,6 +4667,6 @@ To remove the warning, you can use /reference instead (set the Embed Interop Typ
     <value>Public signing was specified and requires a public key, but no public key was specified.</value>
   </data>
   <data name="ERR_InvalidReal" xml:space="preserve">
-    <value>Invalid real literal</value>
+    <value>Invalid real literal.</value>
   </data>
 </root>
