--- a/src/Interactive/EditorFeatures/Core/InteractiveEditorFeaturesResources.resx
+++ b/src/Interactive/EditorFeatures/Core/InteractiveEditorFeaturesResources.resx
@@ -117,6 +117,18 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="EvaluatorRequired" xml:space="preserve">
+    <value>The {0} command is not supported by this execution engine.</value>
+  </data>
+  <data name="FilesCommandDescription" xml:space="preserve">
+    <value>Display a list of loaded files.</value>
+  </data>
+  <data name="ImportsCommandDescription" xml:space="preserve">
+    <value>Display of a list of imported namespaces and types.</value>
+  </data>
+  <data name="ReferencesCommandDescription" xml:space="preserve">
+    <value>Display a list of referenced assemblies.</value>
+  </data>
   <data name="ResetCommandDescription" xml:space="preserve">
     <value>Reset the execution environment to the initial state, keep history.</value>
   </data>
