add options to require this/Me for fields, properties, methods, and events

--- a/src/Features/Core/Portable/FeaturesResources.resx
+++ b/src/Features/Core/Portable/FeaturesResources.resx
@@ -670,8 +670,8 @@ Do you want to continue?</value>
   <data name="SimplifyMemberAccess" xml:space="preserve">
     <value>Simplify Member Access</value>
   </data>
-  <data name="SimplifyThisOrMe" xml:space="preserve">
-    <value>Remove 'this' or 'Me' Qualification</value>
+  <data name="RemoveQualification" xml:space="preserve">
+    <value>Remove qualification</value>
   </data>
   <data name="EditAndContinue" xml:space="preserve">
     <value>Edit and Continue</value>
@@ -881,5 +881,11 @@ Do you want to continue?</value>
   </data>
   <data name="WRN_UnableToLoadAnalyzer" xml:space="preserve">
     <value>Unable to load Analyzer assembly {0}: {1}</value>
+  </data>
+  <data name="AddThisOrMeQualification" xml:space="preserve">
+    <value>Add 'this' or 'Me' qualification.</value>
+  </data>
+  <data name="AddQualification" xml:space="preserve">
+    <value>Add qualification.</value>
   </data>
 </root>
