--- a/src/VisualStudio/CSharp/Impl/CSharpVSResources.resx
+++ b/src/VisualStudio/CSharp/Impl/CSharpVSResources.resx
@@ -309,9 +309,6 @@
   <data name="NewLineKeywords" xml:space="preserve">
     <value>New line options for keywords</value>
   </data>
-  <data name="QualifyMemberAccessWithThis" xml:space="preserve">
-    <value>Qualify member access with 'this'</value>
-  </data>
   <data name="UseVarWhenGeneratingLocals" xml:space="preserve">
     <value>Use 'var' when generating locals</value>
   </data>
@@ -407,5 +404,17 @@
   </data>
   <data name="NewLinesForBracesProperty" xml:space="preserve">
     <value>Place open brace on new line for properties, indexers, and events</value>
+  </data>
+  <data name="QualifyEventAccessWithThis" xml:space="preserve">
+    <value>Qualify event access with 'this'</value>
+  </data>
+  <data name="QualifyFieldAccessWithThis" xml:space="preserve">
+    <value>Qualify field access with 'this'</value>
+  </data>
+  <data name="QualifyMethodAccessWithThis" xml:space="preserve">
+    <value>Qualify method access with 'this'</value>
+  </data>
+  <data name="QualifyPropertyAccessWithThis" xml:space="preserve">
+    <value>Qualify property access with 'this'</value>
   </data>
 </root>
