add options to require this/Me for fields, properties, methods, and events

--- a/src/Features/CSharp/Portable/CSharpFeaturesResources.resx
+++ b/src/Features/CSharp/Portable/CSharpFeaturesResources.resx
@@ -440,4 +440,7 @@
   <data name="DelegateInvocationCanBeSimplified" xml:space="preserve">
     <value>Delegate invocation can be simplified.</value>
   </data>
+  <data name="AddThisQualification" xml:space="preserve">
+    <value>Add 'this' qualification</value>
+  </data>
 </root>
