--- a/src/Features/VisualBasic/Portable/VBFeaturesResources.resx
+++ b/src/Features/VisualBasic/Portable/VBFeaturesResources.resx
@@ -1201,4 +1201,7 @@ Sub(&lt;parameterList&gt;) &lt;statement&gt;</value>
   <data name="AddOverloadsKeyword" xml:space="preserve">
     <value>Add Overloads</value>
   </data>
+  <data name="AddMeQualification" xml:space="preserve">
+    <value>Add 'Me' qualification</value>
+  </data>
 </root>
