--- a/src/Features/VisualBasic/Portable/VBFeaturesResources.resx
+++ b/src/Features/VisualBasic/Portable/VBFeaturesResources.resx
@@ -1207,4 +1207,7 @@ Sub(&lt;parameterList&gt;) &lt;statement&gt;</value>
   <data name="LoadKeywordToolTip" xml:space="preserve">
     <value>Load a vbx file.</value>
   </data>
+  <data name="ShebangKeywordToolTip" xml:space="preserve">
+    <value>Under unix a #! directive specifies program that runs the script. For example (#!/usr/bin/env vbi).</value>
+  </data>
 </root>
