--- a/src/VisualStudio/Core/Def/ServicesVSResources.resx
+++ b/src/VisualStudio/Core/Def/ServicesVSResources.resx
@@ -1367,4 +1367,7 @@ I agree to all of the foregoing:</value>
     <value>Edit {0}</value>
     <comment>{0} is a parameter description</comment>
   </data>
+  <data name="Parameter_Details" xml:space="preserve">
+    <value>Parameter Details</value>
+  </data>
 </root>
