--- a/src/Features/Core/Portable/xlf/FeaturesResources.ko.xlf
+++ b/src/Features/Core/Portable/xlf/FeaturesResources.ko.xlf
@@ -437,6 +437,11 @@
         <target state="translated">네임스페이스로 이동...</target>
         <note />
       </trans-unit>
+      <trans-unit id="NullTestedVariablePossiblyDeclaredNullableDescription">
+        <source>A variable that is tested against 'null' could be annotated as nullable</source>
+        <target state="new">A variable that is tested against 'null' could be annotated as nullable</target>
+        <note />
+      </trans-unit>
       <trans-unit id="Private_member_0_can_be_removed_as_the_value_assigned_to_it_is_never_read">
         <source>Private member '{0}' can be removed as the value assigned to it is never read.</source>
         <target state="translated">Private 멤버 '{0}'에 할당된 값을 읽을 수 없으므로 이 멤버를 제거할 수 있습니다.</target>
@@ -700,6 +705,16 @@
       <trans-unit id="Use_simple_using_statement">
         <source>Use simple 'using' statement</source>
         <target state="translated">간단한 'using' 문 사용</target>
+        <note />
+      </trans-unit>
+      <trans-unit id="Variable_0_could_be_annotated_as_nullable">
+        <source>Variable '{0}' could be annotated as nullable</source>
+        <target state="new">Variable '{0}' could be annotated as nullable</target>
+        <note />
+      </trans-unit>
+      <trans-unit id="Variable_could_be_annotated_as_nullable">
+        <source>Variable could be annotated as nullable</source>
+        <target state="new">Variable could be annotated as nullable</target>
         <note />
       </trans-unit>
       <trans-unit id="Warning_colon_changing_namespace_may_produce_invalid_code_and_change_code_meaning">
