--- a/src/Features/Core/Portable/FeaturesResources.resx
+++ b/src/Features/Core/Portable/FeaturesResources.resx
@@ -1753,4 +1753,7 @@ This version used in: {2}</value>
   <data name="Value_colon" xml:space="preserve">
     <value>Value:</value>
   </data>
+  <data name="Add_DebuggerDisplay" xml:space="preserve">
+    <value>Add DebuggerDisplay</value>
+  </data>
 </root>
